--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation group: 'com.konghq', name: 'unirest-java', version: '3.11.11'
     implementation group: 'net.objecthunter', name: 'exp4j', version: '0.4.8'
     implementation group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.78'
-
+    implementation group: 'org.jline', name: 'jline', version: '3.20.0'
 }
 
 compileJava.options.encoding = 'UTF-8'
