--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation group: 'net.objecthunter', name: 'exp4j', version: '0.4.8'
     implementation group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.78'
     implementation group: 'org.jline', name: 'jline', version: '3.20.0'
+    implementation group: 'com.typesafe', name: 'config', version: '1.3.2'
 }
 
 compileJava.options.encoding = 'UTF-8'
